Zantic fix
- Fixed Cart Icon Counter
- Fixed Purchase padding
- Fixed Checkout minus and plus icons not showing up
- Fixed Hover effect on Pagination Item in Reviews Page
- Fixed Feedback card padding and overflow
- Replaced Column items in headers with Column Background
- Replaced general border radius of Column block with specific border radius for each corner
- Removed "+" in the tax span
- Removed Column:Item as image in the banner and i've set the images as Background of the columns.
- Added property display: flex and flex-direction: column to the banner block so the layout remains the same.
- Adjusted font size of headers
- Changed properties by default of Column Block background image

--- a/themes/zantic/assets/css/block-cart.css
+++ b/themes/zantic/assets/css/block-cart.css
@@ -32,7 +32,8 @@
   left: -4px;
   top: 3px;
   position: absolute;
-  padding: 2px 7px;
+  min-width: 28px;
+  min-height: 28px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
