--- a/themes/zantic/assets/css/shop.css
+++ b/themes/zantic/assets/css/shop.css
@@ -87,7 +87,7 @@
   margin-right: auto;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1320px) {
   .sellix-section .content-width {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
