--- a/themes/zantic/assets/css/snippet-checkout-product-count.css
+++ b/themes/zantic/assets/css/snippet-checkout-product-count.css
@@ -26,6 +26,7 @@
 
 .snippet-checkout-product-count__count-widget span {
   padding: 0.5rem;
+  font-size: 14px;
   cursor: pointer;
 }
 
